<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item android:id="@+id/addButton"
	    android:showAsAction="always" 
	    android:title="@string/menu_add" 
	    android:icon="@drawable/ic_menu_add" 
	    android:visible="false"></item>
    <item android:id="@+id/modifyButton"  
        android:showAsAction="always" 
        android:title="@string/menu_modify" 
        android:icon="@drawable/ic_action_edit"
        android:visible="false"></item>
    <item android:id="@+id/dbSettings" 
        android:orderInCategory="90" 
        android:showAsAction="never" 
        android:title="@string/menu_dbSettings" />
    <item android:id="@+id/preferences" 
        android:orderInCategory="95" 
        android:showAsAction="never" 
        android:title="@string/menu_preferences" />
    <item android:id="@+id/about" 
        android:orderInCategory="100" 
        android:showAsAction="never" 
        android:title="@string/menu_about" />
</menu>